# empty-python-package

./: README.md  Wayne.txt  example.txt  file1.txt  file2.txt  file3.txt  ididit.txt  ididit2.txt  ididit3.txt  ididit4.txt  ohmygod2.txt  omg.txt  pyproject.toml
.github/: .gitkeep
.github/workflows/: main.yml
arch_diagrams/: azure_big_data_arch.py
config/: .gitkeep  test.yaml
configs/: test.yaml
scripts/: aws_diagram.py  azure_diagram.py  azure_storage_diagram.py
source/: init.py
src/: .gitkeep
src/mcalc/: addition.js  division.py  multiply.py  omg.py  subtraction.js
tests/: .gitkeep  test_addition.py  test_division.py  test_multiply.py
