[project]
name = "mytestpackage"
version = "0.1.0"
authors = [{name = "Mohamed Leila", email = "mohamed.laila@mail.mcgill.ca"}]
description = "As simple Python package."
requires-python = ">=3.8"
keywords = ["keyword1", "keyword2"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "requests",
  "numpy"
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
