[project]
name = "mcalc"
version = "0.1.0"
authors = [{"name" = "Mohamed Leila", "email" = "mohamed.laila@mail.mcgill.ca"}]
description = "A simple Python package."
requires-python = ">=3.8"
keywords = ["keyword1", "keyword2"]
classifiers = [
  "Programming Language :: Python : 3",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "hydra-core",
  "requests",
  "numpy"
}


[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest"
]